gift-giving-philosophy-post

--- a/_posts/2019-07-10-fake-meat.md
+++ b/_posts/2019-07-10-fake-meat.md
@@ -34,17 +34,17 @@ Two years ago, I saw this [video][video], and it was the tipping point for me to
 
 I started with cutting beef out of my diet. It was an easy start because beef isn't a significant component of my diet. Now, it's been 2 years my diet is almost beef-free. I did accidentally eat it a couple times, mistaking a dish had pork when it actually had beef, but it's all good. I know mistakes happen. 
 
-I'm in the process of weaning off pork and chicken. It's hard at home because my parents cook it so often, but now that I'm on my own this summer and I am in control of my purchasing choices, it is very much easier. I haven't completely cut it out of my diet. I've cut about 95% of it out of my diet though. 
+I'm in the process of weaning off pork and chicken. It's hard at home because my parents cook it so often, but now that I'm on my own this summer and I am in control of my purchasing choices, it is much easier. I haven't completely cut it out of my diet though, more like around 95%. 
 
-The thing is, when I go out to eat, I will choose a plant-based dish. So, when I'm out, my diet is 100% meat free because I know most places I eat at will not source pasture-raised certified humane meats. However, I have bought a pasture-raised certified humane organic chicken from the farmers' market to make a soup for the "healing" properties after my period; it's something my mom makes for me. I am okay with this right now because I at least know I am supporting local and ethical practices in raising animals. 
+The thing is, when I go out to eat, I will choose plant-based dishes. So, when I'm out, my diet is 100% meat free because I know most places I eat at don't source pasture-raised certified humane meats. However, I have bought a pasture-raised certified humane organic chicken from the farmers' market to make a soup for the "healing" properties after my period; it's something my mom makes for me. I am okay with this right now because I at least know I am supporting local and ethical practices in raising animals. 
 
-Another big adjustment to cutting meat out from my diet is learning how to cook and eat more vegetables to make up for the lack of meat in most of my meals. I used be hungry very often because I wasn't proportionately swapping the vegetables for meat. Practice, commitment, and patience have been critical in helping me get to where I am now. 
+Another big adjustment to cutting meat out from my diet is learning how to cook and eat more vegetables to make up for the lack of meat in most of my meals. I used to be hungry very often because I wasn't proportionately swapping the vegetables for meat. Practice, commitment, and patience have been critical in helping me get to where I am now. 
 
-And I've noticed changes in my body. I can't 100% attribute these changes to just my diet change because I've changed a lot both in mindset and lifestyle in the past couple years. But I know for sure (gotta take my word for it and the numerous research studies out there) that eating less meat has contributed to empowering my body with more natural good energy. I feel good in my body, I love what I eat and what I do, and I'm just enjoying life right now. And I know I'm not contributing as much to the factors that contribute to climate change.
+And I've noticed changes in my body. I can't 100% attribute these changes to just my diet change because I've changed a lot both in mindset and lifestyle in the past couple years. But I know for sure (gotta take my word for it and the numerous research studies out there) that eating less meat has contributed to fueling my body with more natural good energy. I feel good in my body, I love what I eat and what I do, and I'm just enjoying life right now. And I know I'm not contributing as much to the factors that contribute to climate change.
 
 **Takeaways**
 
-I'm not trying to convert you to not eat meat. I'm a supporter of [eating less meat and better meat][better]. My main goal with this post is to release the frustration I have about people's assumption that "Oh, we have vegan meats available so you can eat too!" and share a little bit of my journey of including less meat in my diet. It wasn't super easy, but I'm determined and I've made a significant amount of progress; I'm proud to be where I'm at.
+I'm not trying to convert you to not eat meat. I'm a supporter of [eating less meat and better meat][better]. My main goal with this post is to release the frustration I have about people's assumption that "Oh, we have vegan meats available so you can eat too!" and share a little bit of my journey of including less meat in my diet. It wasn't easy, but I'm determined and I've made a significant amount of progress; I'm proud to be where I'm at.
 
 [BS]: https://foodrevolution.org/blog/plant-based-meat-alternatives/
 [industrial-animals]: https://foodprint.org/issues/raising-animals-industrial-system/
