--- a/_posts/2019-07-21-houston.md
+++ b/_posts/2019-07-21-houston.md
@@ -17,8 +17,8 @@ This opinion is based on our following adventures to:
 * **[The Menil Collection][menil]** -- I'm not a huge art appreciater. However, both my cointerns are. So it was a nice surprise to have spent 2.5 hours here. We looked at each piece of art, and I can appreciate art a little bit more now. I wouldn't voluntarily choose to go see it on my own, but if I'm there, I wouldn't mind.
 * **Menil Bookstore** -- Ehh, I didn't care for it. 
 * **Cy Twombly Gallery** -- I found one piece I really liked there. 
-* **[Andes Cafe][andes]** -- This was my favorite part of the trip; food is often holds a special part of my adventures. The staff was super welcoming and kind. I don't eat South American food much (only a few times in my life), so this was a fantastic introduction to the cuisine (specifically, Venezuelan and Ecuadorean) and I'm intrigued to eat more now. Favorite dish was by far the cachapas; these Venezuelan sweet corn pancakes were flippin' delicious. The cuisine is not very vegetarian friendly. I did try a little bit of meat to taste the flavors and got lots of seafood from the ceviche mixto. But I mostly ate and picked around the meat while my buddies ate the meat. 
-* **Rice University** -- We walked around a little bit and hung out at the Skyspace (not necessary to see...its a ceiling with a square whole). It was very peaceful and lots of green trees and grass. The buildings are very simple, lots of brick in a non-intrusive kind of way. That's as best I can describe it;I wasn't impressed by the buildings. 
+* **[Andes Cafe][andes]** -- This was my favorite part of the trip; food often holds a special part of my adventures. The staff was super welcoming and kind. I don't eat South American food much (only a few times in my life), so this was a fantastic introduction to the cuisine (specifically, Venezuelan and Ecuadorean) and I'm intrigued to eat more now. Favorite dish was by far the cachapas; these Venezuelan sweet corn pancakes were flippin' delicious. The cuisine is not very vegetarian friendly. I did try a little bit of meat to taste the flavors and got lots of seafood from the ceviche mixto. But I mostly ate and picked around the meat while my buddies ate the meat. 
+* **Rice University** -- We walked around a little bit and hung out at the Skyspace (not necessary to see...its a ceiling with a square hole). It was very peaceful and lots of green trees and grass. The buildings are very simple, lots of brick in a non-intrusive kind of way. That's as best I can describe it;I wasn't impressed by the buildings. 
 * Drove through **Downtown** and the **Heights** area -- downtown view from afar at night is cool to see. Being in downtown though, I felt so small being surrounded by such large buildings. The glass builidngs and lack of culture created a cold environment. We drove through for like 5  minutes and bounced. The Heights neighborhood was only a couple streets, but pleasant to drive through. We were there when most shops were about to close, so we didn't bother walking around.
 * **[Agora][agora]** -- interesting cafe-like place. They have wine, beer, a greek frappuccino, and sweet and nice looking pastries. Good vibes to chat, work, read, write, anything I'd want to do in a cafe.
 Prior to Agora, we stopped by a few cute small shops mext to it. Nice to browse.
