--- a/_posts/2019-12-29-found-my-2020-light.md
+++ b/_posts/2019-12-29-found-my-2020-light.md
@@ -47,7 +47,7 @@ I just want to say that I hear them loud and clear. And I feel like they're tell
 
 I definitely don't think they mean that. Their actions and words are a product of culture, community, being a parent, and many factors. But their actions make me feel this way, and I need to stop it.
 
-I've let a lot of fear, antagonism, and self-doubt drive me away from what I've needed and wanted this year. One commitment I've made for 2020 and beyond is to not be in my own way. I am going to channel the fear, antagonism, and self-doubt to fuel myself. To speak up about what's not right around and with me. To build new and stronger relationships, environments, and communities for myself and others. 
+I've let a lot of fear, antagonism, and self-doubt drive me away from what I've needed and wanted this year. One commitment I've made for 2020 and beyond is **to not be in my own way**. I am going to channel the fear, antagonism, and self-doubt to fuel myself. To speak up about what's not right around and with me. To build new and stronger relationships, environments, and communities for myself and others. 
 
 And with that, I'm going to have a talk with my parents about their actions and words, how they've made me feel, how I'd like them to change their tones and messages regarding these topics, what my values are and what I want, and ask them for their support for me as I am and who I want to be. 
 
